# ecsact_lang_cpp

./: .bazelrc  .gitignore  BUILD.bazel  CHANGELOG.md  MODULE.bazel  WORKSPACE.bazel  codegen_plugin.bzl
.github/workflows/: main.yml
bazel/: copts.bzl
cpp_header_codegen/: BUILD.bazel  README.md  cpp_header_codegen.cc
cpp_meta_header_codegen/: BUILD.bazel  README.md  cpp_meta_header_codegen.cc
cpp_systems_header_codegen/: BUILD.bazel  README.md  cpp_systems_header_codegen.cc
cpp_systems_source_codegen/: BUILD.bazel  README.md  cpp_systems_source_codegen.cc
ecsact/: cpp_codegen_plugin_util.hh
ecsact/cpp/: execution_context.hh  type_info.hh
ecsact/lang-support/: lang-cc.hh
header_codegen/: BUILD.bazel  header_codegen.cc
systems_header_codegen/: BUILD.bazel  systems_header_codegen.cc
test/: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  WORKSPACE.bazel  example.ecsact  example_a.ecsact  example_b.ecsact  meta_check.cc  system_impls.cc
test/plugins/: BUILD.bazel  test_plugin.cc
