module(
    name = "ecsact_lang_cpp",
    version = "0.3.3",
    compatibility_level = 3,
)

bazel_dep(name = "rules_cc", version = "0.0.9")
bazel_dep(name = "bazel_skylib", version = "1.4.2")
bazel_dep(name = "ecsact_runtime", version = "0.5.0")
bazel_dep(name = "rules_ecsact", version = "0.4.8")
bazel_dep(name = "ecsact_codegen", version = "0.1.2")

bazel_dep(name = "toolchains_llvm", version = "1.0.0", dev_dependency = True)
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    commit = "204aa593e002cbd177d30f11f54cff3559110bb9",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
)

ecsact = use_extension("@rules_ecsact//ecsact:extensions.bzl", "ecsact", dev_dependency = True)
ecsact.sdk_toolchain(version = "0.6.2")
use_repo(ecsact, "ecsact_sdk", "ecsact_toolchains")

llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm", dev_dependency = True)
llvm.toolchain(llvm_version = "17.0.6")
use_repo(llvm, "llvm_toolchain")

register_toolchains(
    "@llvm_toolchain//:all",
    "@ecsact_toolchains//:all",
    dev_dependency = True,
)
