load("//bazel:copts.bzl", "copts")
load("@ecsact_runtime//:codegen_plugin.bzl", "cc_ecsact_codegen_plugin")

package(default_visibility = ["//visibility:public"])

cc_ecsact_codegen_plugin(
    name = "ecsact_cpp_header_codegen",
    srcs = ["cpp_header_codegen.cc"],
    copts = copts,
    no_validate_test = True,  # file name is too long on Windows
    deps = ["//:support"],
)

filegroup(
    name = "cpp_header_codegen",
    srcs = [
        ":ecsact_cpp_header_codegen",
    ],
)
