load("//bazel:copts.bzl", "copts")
load("@ecsact_runtime//:codegen_plugin.bzl", "cc_ecsact_codegen_plugin")

package(default_visibility = ["//visibility:public"])

cc_ecsact_codegen_plugin(
    name = "ecsact_cpp_header_codegen",
    srcs = ["cpp_header_codegen.cc"],
    copts = copts,
    output_extension = "hh",
    deps = ["//:support"],
)

alias(
    name = "cpp_header_codegen",
    actual = ":ecsact_cpp_header_codegen",
)
