load("//:codegen_plugin.bzl", "cc_ecsact_codegen_plugin")
load("//bazel:copts.bzl", "copts")

package(default_visibility = ["//visibility:public"])

cc_ecsact_codegen_plugin(
    name = "ecsact_cpp_header_codegen",
    srcs = ["cpp_header_codegen.cc"],
    copts = copts,
    output_extension = "hh",
    deps = [
        "//:cpp_codegen_plugin_util",
        "//:support",
    ],
)

alias(
    name = "cpp_header_codegen",
    actual = ":ecsact_cpp_header_codegen",
)
