load("//bazel:copts.bzl", "copts")
load("@ecsact_codegen//:codegen_plugin.bzl", "cc_ecsact_codegen_plugin")

package(default_visibility = ["//visibility:public"])

cc_ecsact_codegen_plugin(
    name = "ecsact_cpp_meta_header_codegen",
    srcs = ["cpp_meta_header_codegen.cc"],
    copts = copts,
    no_validate_test = True,  # file name is too long on Windows
    output_extension = "meta.hh",
    deps = [
        "//:support",
        "//:cpp_codegen_plugin_util",
    ],
)

alias(
    name = "cpp_meta_header_codegen",
    actual = ":ecsact_cpp_meta_header_codegen",
)
