load("//bazel:copts.bzl", "copts")
load("@ecsact_runtime//:codegen_plugin.bzl", "cc_ecsact_codegen_plugin")

package(default_visibility = ["//visibility:public"])

cc_ecsact_codegen_plugin(
    name = "ecsact_systems_header_codegen",
    srcs = ["systems_header_codegen.cc"],
    copts = copts,
    deps = ["//:support"],
)

filegroup(
    name = "systems_header_codegen",
    srcs = [
        ":ecsact_systems_header_codegen",
    ],
)
