load("//bazel:copts.bzl", "copts")
load("@ecsact_runtime//:codegen_plugin.bzl", "cc_ecsact_codegen_plugin")

package(default_visibility = ["//visibility:public"])

cc_ecsact_codegen_plugin(
    name = "ecsact_systems_header_codegen",
    srcs = ["systems_header_codegen.cc"],
    copts = copts,
    no_validate_test = True,  # file name is too long on Windows
    output_extension = "systems.h",
    deps = ["//:support"],
)

alias(
    name = "systems_header_codegen",
    actual = ":ecsact_systems_header_codegen",
)
