module(name = "ecsact_lang_cpp_tests")

bazel_dep(name = "bazel_skylib", version = "1.4.2")
bazel_dep(name = "ecsact_lang_cpp")
bazel_dep(name = "rules_ecsact", version = "0.4.0")
bazel_dep(name = "rules_cc", version = "0.0.8")
bazel_dep(name = "ecsact_runtime", version = "0.5.0")

local_path_override(
    module_name = "ecsact_lang_cpp",
    path = "..",
)

ecsact = use_extension("@rules_ecsact//ecsact:extensions.bzl", "ecsact")
ecsact.sdk_toolchain(version = "0.6.2")
use_repo(ecsact, "ecsact_sdk", "ecsact_toolchains")

register_toolchains("@ecsact_toolchains//:all")
